[gd_scene load_steps=7 format=2]

[ext_resource path="res://Images/map_icon.png" type="Texture" id=1]
[ext_resource path="res://Font/Arial_Title.tres" type="DynamicFont" id=2]
[ext_resource path="res://Images/Exit_2.png" type="Texture" id=3]
[ext_resource path="res://Images/Gear.png" type="Texture" id=4]
[ext_resource path="res://GUI/Title/Title.gd" type="Script" id=5]
[ext_resource path="res://Images/shop_icon.png" type="Texture" id=6]

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 458.0
margin_right = 600.0
margin_bottom = 566.0
custom_fonts/font = ExtResource( 2 )
text = "Göktaşı"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 3

[node name="Settings" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -128.0
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 3

[node name="Quit" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -128.0
margin_right = 128.0
rect_min_size = Vector2( 0, 64 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 3

[node name="Store" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 0.875
anchor_right = 1.0
anchor_bottom = 0.875
margin_left = -128.0
margin_top = -128.0
margin_bottom = -6.10352e-05
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 3

[node name="Map" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -256.0
margin_top = -128.0
margin_right = -128.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 10
size_flags_vertical = 0
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 3

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="button_down" from="Settings" to="." method="_on_Settings_button_down"]
[connection signal="button_down" from="Quit" to="." method="_on_Quit_button_down"]
[connection signal="button_down" from="Store" to="." method="_on_Store_button_down"]
[connection signal="button_down" from="Map" to="." method="_on_Map_button_down"]
